Merge annotations, proofread docs